--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,11 @@
 body {
+  background-color: rgba(255, 255, 255, 0)!important;
 }
 
 html {
   position: relative;
   min-height: 100%;
+  /*background-color: rgb(212, 221, 226);*/
 }
 
 .starter-template {
